starting the media queries

--- a/page2.html
+++ b/page2.html
@@ -10,6 +10,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet" type="text/css" href="style/normalize.css">
   <link rel="stylesheet" href="style/style.css">
+  <link rel="stylesheet" href="style/MediaQueries.css">
   <title>Video Games!</title>
 </head>
 <body class="onpage1">
