--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" type="text/css" href="style/normalize.css">
   <link rel="stylesheet" href="style/style.css">
   <link rel="stylesheet" href="style/MediaQueries.css">
+  <script type="text/javascript" src="script/script.js"></script>
   <title>Who is Mosa?</title>
 </head>
 <body class="onpage">
@@ -19,6 +20,7 @@
       <li id="onpage" class="page1"><a href="https://Mosa-code.github.io/Project-2-CSS/index.html" title="intropage">Introduction</a></li>
       <li class="page2"><a href="https://Mosa-code.github.io/Project-2-CSS/page2.html" title="videogames">Video Games!</a></li>
       <li class="page3"><a href="https://Mosa-code.github.io/Project-2-CSS/page3.html" title="resume">My resume</a></li>
+      <li><button id="btnLike" onclick="myFunction()">Like</button></li>
     </ul>
   </nav>
   <h1 class="Title">Who Am I?</h1>
