adding the button to both of the pages

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <li id="onpage" class="page1"><a href="https://Mosa-code.github.io/Project-2-CSS/index.html" title="intropage">Introduction</a></li>
       <li class="page2"><a href="https://Mosa-code.github.io/Project-2-CSS/page2.html" title="videogames">Video Games!</a></li>
       <li class="page3"><a href="https://Mosa-code.github.io/Project-2-CSS/page3.html" title="resume">My resume</a></li>
-      <li><button id="btnLike" onclick="myFunction()">Like</button></li>
+      <li><button id="likebtn" onclick="myFunction()">Like</button></li>
     </ul>
   </nav>
   <h1 class="Title">Who Am I?</h1>
