--- a/page3.html
+++ b/page3.html
@@ -16,9 +16,10 @@
 <body class="onpage2" id="wrapper">
   <nav class="nav_bar">
     <ul>
-      <li class="page1"><a href="https://Mosa-code.github.io/Project-2-CSS/index.html" title="intropage">Introduction</a></li>
+      <li id="onpage" class="page1"><a href="https://Mosa-code.github.io/Project-2-CSS/index.html" title="intropage">Introduction</a></li>
       <li class="page2"><a href="https://Mosa-code.github.io/Project-2-CSS/page2.html" title="videogames">Video Games!</a></li>
-      <li id="onpage2" class="page3"><a href="https://Mosa-code.github.io/Project-2-CSS/page3.html" title="resume">My resume</a></li>
+      <li class="page3"><a href="https://Mosa-code.github.io/Project-2-CSS/page3.html" title="resume">My resume</a></li>
+      <li><button id="likebtn" onclick="myFunction()">Like</button></li>
     </ul>
   </nav>
   <h1>Hello</h1>
