implemented hidden button!

--- a/page2.html
+++ b/page2.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" type="text/css" href="style/normalize.css">
   <link rel="stylesheet" href="style/style.css">
   <link rel="stylesheet" href="style/MediaQueries.css">
+  <script type="text/javascript" src="script/script.js"></script>
   <title>Video Games!</title>
 </head>
 <body class="onpage1">
@@ -97,6 +98,8 @@
   <audio controls>
     <source src="audio/XenobladeChroniclesMainTheme.mp3" type="audio/mpeg">
   </audio>
+<div id="hidden button!">
+  <button id="hiddenbutton" onclick="scary()">click for a surprise!</button>
+</div>
 </body>
-
 </html>
