finished adding google maps

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" type="text/css" href="style/normalize.css">
   <link rel="stylesheet" href="style/style.css">
   <link rel="stylesheet" href="style/MediaQueries.css">
-  <script type="text/javascript" src="script/script.js"></script>
+  <script src="script/script.js"></script>
   <title>Who is Mosa?</title>
 </head>
 <body class="onpage">
@@ -68,6 +68,9 @@
     which I
     will talk about in my second page. Thank you very much for reading! :D
   </p>
+
+  <p>P.S. My favorite resteraunt is The Great Beijing, if you wonder where it is, here you go!</p>
+  <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11859.45711952675!2d-87.7274617!3d42.0031882!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x583a0d287c6a9353!2sGreat%20Beijing%20Chinese%20Restaurant!5e0!3m2!1sen!2sus!4v1670203749773!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </body>
 
 </html>
