--- a/page2.html
+++ b/page2.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" type="text/css" href="style/normalize.css">
   <link rel="stylesheet" href="style/style.css">
   <link rel="stylesheet" href="style/MediaQueries.css">
-  <script type="text/javascript" src="script/script.js"></script>
+  <script src="script/script.js"></script>
   <title>Video Games!</title>
 </head>
 <body class="onpage1">
@@ -98,7 +98,7 @@
   <audio controls>
     <source src="audio/XenobladeChroniclesMainTheme.mp3" type="audio/mpeg">
   </audio>
-<div id="hidden button!">
+<div id="hiddenbutton!">
   <button id="hiddenbutton" onclick="scary()">click for a surprise!</button>
 </div>
 </body>
