--- a/page3.html
+++ b/page3.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" type="text/css" href="style/normalize.css">
   <link rel="stylesheet" href="style/style.css">
   <link rel="stylesheet" href="style/MediaQueries.css">
-  <script type="text/javascript" src="script/script.js"></script>
+  <script src="script/script.js"></script>
   <title>Resume</title>
 </head>
 <body class="onpage2" id="wrapper">
